k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snippet-django
  labels:
    app: snippet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snippet
  template:
    metadata:
      labels:
        app: snippet
    spec:
      containers:
        - name: snippet-django
          image: ghcr.io/charlyrousseau/snippet-django:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-files
              mountPath: /app/static
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: snippet-static-pvc
      imagePullSecrets:
        - name: ghcr-secret
