k8s/ngninx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snippet-nginx-service
  namespace: snippet
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
