k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snippet-django-service
spec:
  selector:
    app: snippet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
