k8s/snippet-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: snippet-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`snippet.playground-charly.fr`)
      services:
        - name: snippet-service
          port: 80
  tls:
    secretName: snippet-tls-secret
